--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prisma": "^6.15.0",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "tsc-alias": "^1.8.10",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
@@ -47,9 +48,9 @@
     "swagger-ui-express": "^5.0.1"
   },
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc && npx tsc-alias",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev src/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
     "migrate": "prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
