--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "scripts": {
-    "build": "npx tsc && npx tsc-alias",
+  "build": "npx tsc && npx tsc-alias && npx prisma generate",
     "start": "node dist/server.js",
     "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
     "migrate": "prisma migrate dev",
