--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "prisma": "^6.15.0",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
     "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
   "dependencies": {
+    "@apidevtools/swagger-parser": "^12.1.0",
     "@prisma/client": "^6.15.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.6",
@@ -45,15 +46,16 @@
     "redis": "^5.5.6",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-parser": "^10.0.3",
+    "swagger-ui-express": "^5.0.1",
+    "z-schema": "^6.0.2"
   },
   "scripts": {
-  "build": "npx tsc && npx tsc-alias && npx prisma generate",
+    "build": "npx tsc && npx tsc-alias && npx prisma generate",
     "start": "node dist/server.js",
     "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
     "migrate": "prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install || true",
     "lint": "eslint \"**/{src,apps,libs,test}/**/*.ts\" \"*.js\" --fix",
     "format": "prettier --write \"**/src/**/*.ts\"",
     "format:test": "prettier --write \"**/test/**/*.ts\""
