feat(server): implement call with webrtc, refactor code and unit test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "config": ["config/index.ts"],
       "types": ["types/index.ts"]
     },
-    "outDir": "dist"
+    "outDir": "dist",
+    "isolatedModules": true
   },
   "include": ["src"]
 }
