--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^22.10.6",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -23,9 +24,11 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
+    "jest": "^30.2.0",
     "prettier": "^3.4.2",
     "prisma": "^6.15.0",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
@@ -45,6 +48,7 @@
     "postgres": "^3.4.4",
     "redis": "^5.5.6",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-parser": "^10.0.3",
     "swagger-ui-express": "^5.0.1",
@@ -58,6 +62,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint \"**/{src,apps,libs,test}/**/*.ts\" \"*.js\" --fix",
     "format": "prettier --write \"**/src/**/*.ts\"",
-    "format:test": "prettier --write \"**/test/**/*.ts\""
+    "format:test": "prettier --write \"**/test/**/*.ts\"",
+    "test:call": "jest --config jest.config.ts --detectOpenHandles",
+    "test:call:flow": "jest test/video-call/call-flow.test.ts"
   }
 }
