--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@posthog/react": "^1.5.2",
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-query-devtools": "^4.29.5",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "posthog-js": "^1.309.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
